Add interface call

--- a/dashboard/src/components/GlobalHeader/index.less
+++ b/dashboard/src/components/GlobalHeader/index.less
@@ -1,4 +1,4 @@
-@import "~antd/es/style/themes/default.less";
+@import '~antd/es/style/themes/default.less';
 
 @pro-header-hover-bg: rgba(0, 0, 0, 0.025);
 
@@ -42,7 +42,7 @@
   }
   .account {
     .avatar {
-      margin: ~"calc((@{layout-header-height} - 24px) / 2)" 0;
+      margin: ~'calc((@{layout-header-height} - 24px) / 2)' 0;
       margin-right: 8px;
       color: @primary-color;
       vertical-align: top;
