--- a/dashboard/src/components/Trait/index.less
+++ b/dashboard/src/components/Trait/index.less
@@ -1,27 +1,27 @@
-.deployment{
-  background-color: #fff;
-  border: 1px solid #eee;
+.deployment {
+  position: relative;
   padding: 10px;
   padding-left: 16px;
-  position: relative;
-  a{
+  background-color: #fff;
+  border: 1px solid #eee;
+  a {
     position: absolute;
-    right: 16px;
     top: 10px;
+    right: 16px;
     font-size: 20px;
   }
   .title {
-    line-height: 36px;
+    margin: 0;
     font-size: 18px;
-    margin: 0px;
+    line-height: 36px;
   }
   p {
-    line-height: 20px;
     font-size: 12px;
+    line-height: 20px;
   }
 }
-.create-button{
-  text-align: right;
-  float: right; 
+.create-button {
+  float: right;
   margin-top: 16px;
+  text-align: right;
 }
