--- a/dashboard/src/global.less
+++ b/dashboard/src/global.less
@@ -1,4 +1,4 @@
-@import "~antd/es/style/themes/default.less";
+@import '~antd/es/style/themes/default.less';
 
 html,
 body,
@@ -58,14 +58,14 @@ ol {
 // 首页导航标题样式
 #logo {
   padding: 16px 8px;
-  img{
+  img {
     display: none;
   }
 }
 // 面包屑样式调整
-.ant-page-header{
-  padding: 12px 24px!important;
+.ant-page-header {
+  padding: 12px 24px !important;
 }
-.ant-page-header-heading{
-  display: none!important;
+.ant-page-header-heading {
+  display: none !important;
 }
