--- a/dashboard/src/pages/ApplicationList/ApplicationListDetail/index.less
+++ b/dashboard/src/pages/ApplicationList/ApplicationListDetail/index.less
@@ -1,8 +1,8 @@
-.app-detial{
+.app-detial {
   .ant-tabs {
-    padding: 10px 20px;
-    min-height: 500px;
     height: 500px;
+    min-height: 500px;
+    padding: 10px 20px;
     overflow: auto;
     background-color: #fff;
     .ant-tabs-content-holder {
@@ -14,37 +14,37 @@
   .summaryBox {
     clear: both;
     margin-bottom: 20px;
-    padding: 0px 10px 10px;
+    padding: 0 10px 10px;
     .title {
-      line-height: 36px;
-      font-size: 16px;
       font-weight: 500;
+      font-size: 16px;
+      line-height: 36px;
       // color: #fff;
     }
     p {
-      line-height: 20px;
+      margin: 0;
       font-size: 12px;
-      margin: 0px;
+      line-height: 20px;
     }
   }
   .summaryBox1 {
-    background: #0097A7;
     color: #fff;
+    background: #0097a7;
     cursor: pointer;
   }
   .summaryBox2 {
-    background: #92C47C;
     color: #fff;
+    background: #92c47c;
   }
   .summaryBox {
     border: 1px solid black;
     cursor: pointer;
   }
-  .hasCursor{
+  .hasCursor {
     font-size: 20px;
     cursor: pointer;
   }
-  .floatRight{
+  .floatRight {
     float: right;
   }
 }
