--- a/dashboard/src/pages/ApplicationList/CreateApplication/index.less
+++ b/dashboard/src/pages/ApplicationList/CreateApplication/index.less
@@ -1,42 +1,42 @@
 .create-container {
-  background: #fff;
   padding: 10px;
+  background: #fff;
 }
-.create-app{
-  .minBox{
+.create-app {
+  .minBox {
     margin: 20px 10px;
     padding: 10px;
     border: 1px solid #eee;
     .title {
-      line-height: 36px;
       font-size: 16px;
+      line-height: 36px;
     }
   }
-  .buttonBox{
-    margin: 0px 10px;
-    padding: 10px;
-    height: 42px;
+  .buttonBox {
     clear: both;
+    height: 42px;
+    margin: 0 10px;
+    padding: 10px;
   }
-  .floatRight{
+  .floatRight {
     float: right;
   }
-  .floatRightGap{
+  .floatRightGap {
     float: right;
     margin-right: 16px;
   }
-  .relativeBox{
-    // border: 1px solid #eee;
-    padding: 0px 48px 0px 16px;
+  .relativeBox {
     position: relative;
-    .hasMore{
+    // border: 1px solid #eee;
+    padding: 0 48px 0 16px;
+    .hasMore {
       position: absolute;
-      top: 0px; 
+      top: 0;
       right: 16px;
       padding: 4px;
-      cursor: pointer;
-      font-size: 16px;
       color: rgb(24, 144, 255);
+      font-size: 16px;
+      cursor: pointer;
     }
   }
   .summaryBox1,
@@ -44,16 +44,16 @@
   .summaryBox {
     clear: both;
     margin-bottom: 20px;
-    padding: 0px 10px 10px;
+    padding: 0 10px 10px;
     p {
-      line-height: 20px;
+      margin: 0;
       font-size: 12px;
-      margin: 0px;
+      line-height: 20px;
     }
   }
   .summaryBox1 {
-    background: #0097A7;
     color: #fff;
+    background: #0097a7;
   }
   .summaryBox2 {
     background: yellow;
@@ -61,7 +61,7 @@
   .summaryBox {
     border: 1px solid black;
   }
-  .hasMargin{
-    padding: 8px 0px;
+  .hasMargin {
+    padding: 8px 0;
   }
 }
