--- a/dashboard/src/pages/ApplicationList/index.less
+++ b/dashboard/src/pages/ApplicationList/index.less
@@ -2,31 +2,31 @@
   margin-bottom: 30px !important;
 }
 .ant-card-head {
-  padding: 0px 10px;
+  padding: 0 10px;
 }
 .ant-card-body {
   padding: 10px;
 }
 .cardContent {
   position: relative;
-  .box1{
-    padding: 0px;
+  .box1 {
     position: relative;
+    padding: 0;
   }
-  .box2{
-    padding: 0px;
+  .box2 {
     position: absolute;
     top: 21px;
-    width: 0px;
+    width: 0;
+    padding: 0;
     border-left: 1px solid black;
   }
-  .box3{
+  .box3 {
     position: absolute;
-    border-bottom: 1px solid black;
     top: 21px;
-    height: 0px;
+    height: 0;
+    border-bottom: 1px solid black;
   }
-  .hasPadding{
+  .hasPadding {
     padding: 10px;
     color: #fff;
   }
@@ -35,14 +35,18 @@
   }
   .first1 {
     margin-left: 40px;
-    background: red;
+    background: #1890ff;
   }
   .first2 {
     margin-left: 40px;
-    background: #92C47C;
+    background: red;
+  }
+  .first3 {
+    margin-left: 40px;
+    background: #92c47c;
   }
   .other {
     margin-left: 80px;
-    background: #EE9611;
+    background: #ee9611;
   }
 }
