--- a/dashboard/src/pages/Traits/Detail/index.less
+++ b/dashboard/src/pages/Traits/Detail/index.less
@@ -1,4 +1,4 @@
-.trait-detail{
+.trait-detail {
   .ant-tabs {
     padding: 10px 20px;
     background-color: #fff;
@@ -6,17 +6,17 @@
       background: #fff;
     }
   }
-  .hasBorder{
+  .hasBorder {
     border: 1px solid #eee;
-    .hasPadding{
-      padding: 16px 16px 0px;
+    .hasPadding {
+      padding: 16px 16px 0;
     }
   }
-  .title{
-    font-size: 18px;
+  .title {
     color: black;
+    font-size: 18px;
   }
-  .textAlignLeft{
+  .textAlignLeft {
     padding-left: 16px;
     text-align: left;
   }
