update dashboard ux

--- a/dashboard/src/global.less
+++ b/dashboard/src/global.less
@@ -69,3 +69,16 @@ ol {
 .ant-page-header-heading {
   display: none !important;
 }
+.ant-pro-page-container-warp {
+  display: none;
+}
+.ant-pro-basicLayout-content {
+  margin: 0 !important;
+}
+.ant-pro-basicLayout-content .ant-pro-page-container {
+  margin: 0 !important;
+}
+.breadCrumb {
+  padding: 12px 24px;
+  background: #fff;
+}
