--- a/dashboard/src/pages/ApplicationList/CreateApplication/index.less
+++ b/dashboard/src/pages/ApplicationList/CreateApplication/index.less
@@ -53,7 +53,7 @@
   }
   .summaryBox1 {
     color: #fff;
-    background: #0097a7;
+    background: rgb(24, 144, 255);
   }
   .summaryBox2 {
     background: yellow;
