--- a/dashboard/src/pages/ApplicationList/index.less
+++ b/dashboard/src/pages/ApplicationList/index.less
@@ -15,38 +15,42 @@
   }
   .box2 {
     position: absolute;
-    top: 21px;
+    top: 15px;
     width: 0;
     padding: 0;
     border-left: 1px solid black;
   }
   .box3 {
     position: absolute;
-    top: 21px;
+    top: 15px;
     height: 0;
     border-bottom: 1px solid black;
   }
   .hasPadding {
-    padding: 10px;
+    // padding: 10px;
+    padding: 4px;
     color: #fff;
   }
   div {
     margin-bottom: 10px;
   }
   .first1 {
-    margin-left: 40px;
-    background: #1890ff;
+    margin-left: 30px;
+    // background: #92c47c;
+    background: #4caf51;
   }
   .first2 {
-    margin-left: 40px;
-    background: red;
+    margin-left: 30px;
+    // background: red;
+    background: #f44337;
   }
   .first3 {
-    margin-left: 40px;
-    background: #92c47c;
+    margin-left: 30px;
+    background: #1890ff;
   }
   .other {
-    margin-left: 80px;
-    background: #ee9611;
+    margin-left: 50px;
+    // background: #ee9611;
+    background: #ffc105;
   }
 }
