--- a/dashboard/src/pages/Traits/Detail/index.less
+++ b/dashboard/src/pages/Traits/Detail/index.less
@@ -9,12 +9,18 @@
   .hasBorder {
     border: 1px solid #eee;
     .hasPadding {
-      padding: 16px 16px 0;
+      padding: 16px;
     }
   }
   .title {
     color: black;
     font-size: 18px;
+  }
+  .hasBG {
+    margin-top: 50px;
+    margin-bottom: 8px;
+    padding-left: 16px;
+    background: rgba(0, 0, 0, 0.04);
   }
   .textAlignLeft {
     padding-left: 16px;
