--- a/dashboard/src/pages/Capability/index.less
+++ b/dashboard/src/pages/Capability/index.less
@@ -1,3 +1,14 @@
 p {
   margin: 0;
 }
+.hoverItem {
+  .copyIcon {
+    display: none;
+    margin-left: 10px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+}
+.hoverItem:hover .copyIcon {
+  display: inline-block;
+}
