Update code and page optimization ,fix bug

--- a/dashboard/src/pages/ApplicationList/CreateApplication/index.less
+++ b/dashboard/src/pages/ApplicationList/CreateApplication/index.less
@@ -27,7 +27,6 @@
   }
   .relativeBox {
     position: relative;
-    // border: 1px solid #eee;
     padding: 0 48px 0 16px;
     .hasMore {
       position: absolute;
@@ -53,7 +52,7 @@
   }
   .summaryBox1 {
     color: #fff;
-    background: #0097a7;
+    background: rgb(24, 144, 255);
   }
   .summaryBox2 {
     background: yellow;
