--- a/dashboard/src/pages/Capability/Detail/index.less
+++ b/dashboard/src/pages/Capability/Detail/index.less
@@ -3,13 +3,19 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 10px;
+  margin: 10px 16px 10px 0;
   padding: 10px 0;
   background-color: #fff;
   cursor: pointer;
   img {
     width: 60%;
     margin: 10px auto;
+  }
+  .title {
+    width: 60%;
+    margin: 10px auto;
+    font-size: 30px;
+    text-align: center;
   }
   p {
     margin: 0;
