--- a/dashboard/src/pages/document.ejs
+++ b/dashboard/src/pages/document.ejs
@@ -3,29 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="keywords"
-      content="antd,umi,umijs,ant design,脚手架,布局, Ant Design,项目,Pro,admin,控制台,主页,开箱即用,中后台,解决方案,组件库"
-    />
-    <meta
-      name="description"
-      content="
-    An out-of-box UI solution for enterprise applications as a React boilerplate."
-    />
-    <meta
-      name="description"
-      content="
-      开箱即用的中台前端/设计解决方案。"
-    />
+    <meta name="keywords" content="kubevela,kubevela dashboard" />
+    <meta name="description" content="An kubevela dashboard." />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>Ant Design Pro</title>
+    <title><%= context.config.layout.title%></title>
     <link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
   </head>
   <body>
-    <noscript>Out-of-the-box mid-stage front/design solution!</noscript>
+    <noscript>Your browser does not support JavaScript!</noscript>
     <div id="root">
       <style>
         html,
@@ -205,7 +193,7 @@
             width="32"
             style="margin-right: 8px"
           />
-          Ant Design
+          <%= context.config.layout.title%>
         </div>
       </div>
     </div>
