--- a/dashboard/src/pages/document.ejs
+++ b/dashboard/src/pages/document.ejs
@@ -189,7 +189,7 @@
         </div>
         <div style="display: flex; align-items: center; justify-content: center">
           <img
-            src="https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg"
+            src="<%= context.config.publicPath +'pro_icon.svg'%>"
             width="32"
             style="margin-right: 8px"
           />
