--- a/dashboard/src/pages/document.ejs
+++ b/dashboard/src/pages/document.ejs
@@ -191,8 +191,7 @@
           <img
             src="<%= context.config.publicPath +'pro_icon.svg'%>"
             width="32"
-            style="margin-right: 8px"
-          />
+            style="margin-right: 8px" />
           <%= context.config.layout.title%>
         </div>
       </div>
